--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -64,28 +64,16 @@ jobs:
 
       - name: Deploy runtime (windeployqt)
         run: |
-          BUILD_DIR="build/Release-MSYS2"
-          APP_EXE="$BUILD_DIR/app/app.exe"
-          PUBLISH_DIR="build/publish"
-
-          # Clean and prepare publish directory
-          rm -rf "$PUBLISH_DIR"
-          mkdir -p "$PUBLISH_DIR"
-
-          # Copy built app directory to publish
-          echo "====Copying built app directory to publish===="
-          cp -r "$BUILD_DIR/app/"** "$PUBLISH_DIR/"
-
           # Run windeployqt to deploy Qt dependencies
           echo "====Running windeployqt6===="
-          windeployqt6.exe "$PUBLISH_DIR/"app.exe
+          windeployqt6.exe build/Release-MSYS2/app.exe
           echo "====Deployment completed===="
 
           # Copy missing DLLs from /clang64/bin
           echo "====Copying missing DLLs from /clang64/bin===="
-          /clang64/bin/ntldd.exe -R "$PUBLISH_DIR/"app.exe | grep "clang64" | awk '{print $1}' | while read dll; do
+          /clang64/bin/ntldd.exe -R build/Release-MSYS2/app.exe | grep "clang64" | awk '{print $1}' | while read dll; do
               if [ -f "/clang64/bin/$dll" ]; then
-                  cp "/clang64/bin/$dll" "$PUBLISH_DIR/"
+                  cp "/clang64/bin/$dll" build/Release-MSYS2/
                   echo "Copied: $dll"
               else
                   echo "Not found in /clang64/bin: $dll"
@@ -97,7 +85,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: ${{ env.APP_NAME }}-msys2-clang64-Release
-          path: build/publish/**
+          path: build/Release-MSYS2/**
           if-no-files-found: error
           compression-level: 9
           retention-days: 7
