--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -29,7 +29,7 @@ if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/TestUtilities.cpp)
         CXX_STANDARD_REQUIRED ON
         CXX_EXTENSIONS OFF
     )
-    message(STATUS "Created TestUtilities library")
+    message(VERBOSE "Created TestUtilities library")
 endif()
 
 # ============================================================================
@@ -324,7 +324,7 @@ if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/managers/test_windows_path.cpp)
             LINK_LIBRARIES GTest::gtest GTest::gtest_main
             TIMEOUT 300
         )
-        message(STATUS "Windows path tests enabled with Google Test")
+        message(VERBOSE "Windows path tests enabled with Google Test")
     else()
         message(WARNING "Google Test not found, test_windows_path disabled")
     endif()
@@ -741,7 +741,7 @@ if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/utils/test_thread_safety.cpp)
             LINK_LIBRARIES GTest::gtest GTest::gtest_main
             TIMEOUT 600
         )
-        message(STATUS "Thread safety tests enabled with Google Test")
+        message(VERBOSE "Thread safety tests enabled with Google Test")
     else()
         message(WARNING "Google Test not found, thread safety tests disabled")
     endif()
@@ -751,25 +751,25 @@ endif()
 # Test Configuration Summary
 # ============================================================================
 
-message(STATUS "")
-message(STATUS "Test Configuration Summary:")
-message(STATUS "  ENABLE_QGRAPHICS_PDF_SUPPORT: ${ENABLE_QGRAPHICS_PDF_SUPPORT}")
-message(STATUS "  Qt6 version: ${Qt6_VERSION}")
-message(STATUS "  Default test timeout: 300 seconds")
-message(STATUS "  Test organization: Mirrors app/ directory structure")
-message(STATUS "")
-message(STATUS "Test directories:")
-message(STATUS "  - cache/        : Cache subsystem tests")
-message(STATUS "  - command/      : Command pattern tests")
-message(STATUS "  - controller/   : Controller and service tests")
-message(STATUS "  - factory/      : Factory pattern tests")
-message(STATUS "  - integration/  : Multi-component integration tests")
-message(STATUS "  - logging/      : Logging system tests")
-message(STATUS "  - managers/     : Manager component tests")
-message(STATUS "  - model/        : Model component tests")
-message(STATUS "  - performance/  : Performance benchmarks")
-message(STATUS "  - real_world/   : Real-world scenario tests")
-message(STATUS "  - search/       : Search subsystem tests")
-message(STATUS "  - ui/           : UI integration tests")
-message(STATUS "  - utils/        : Utility component tests")
-message(STATUS "")
+message(NOTICE "")
+message(NOTICE "Test Configuration Summary:")
+message(NOTICE "  ENABLE_QGRAPHICS_PDF_SUPPORT: ${ENABLE_QGRAPHICS_PDF_SUPPORT}")
+message(NOTICE "  Qt6 version: ${Qt6_VERSION}")
+message(NOTICE "  Default test timeout: 300 seconds")
+message(NOTICE "  Test organization: Mirrors app/ directory structure")
+message(NOTICE "")
+message(NOTICE "Test directories:")
+message(NOTICE "  - cache/        : Cache subsystem tests")
+message(NOTICE "  - command/      : Command pattern tests")
+message(NOTICE "  - controller/   : Controller and service tests")
+message(NOTICE "  - factory/      : Factory pattern tests")
+message(NOTICE "  - integration/  : Multi-component integration tests")
+message(NOTICE "  - logging/      : Logging system tests")
+message(NOTICE "  - managers/     : Manager component tests")
+message(NOTICE "  - model/        : Model component tests")
+message(NOTICE "  - performance/  : Performance benchmarks")
+message(NOTICE "  - real_world/   : Real-world scenario tests")
+message(NOTICE "  - search/       : Search subsystem tests")
+message(NOTICE "  - ui/           : UI integration tests")
+message(NOTICE "  - utils/        : Utility component tests")
+message(NOTICE "")
